# boggart-2

./: CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/boggart_2/: __init__.py  agent.py  app.py  bot.py  config.py  image_providers.py  main.py  openai.py  tools.py  types.py
