[project]
name = "boggart-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chandler Berry", email = "chandler.r.berry@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.5.2",
    "fastapi[standard]>=0.115.13",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[project.scripts]
boggart = "boggart_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "single"


